--- a/src/app/Pages/home/home.html
+++ b/src/app/Pages/home/home.html
@@ -1,8 +1,13 @@
-<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-3 p-7" >
-    <div *ngFor="let m of Moviedata" class="border-2 border-b-blue-500 rounded-3xl flex flex-col items-center p-2 gap-3 bg-orange-100">
-        <img src="https://image.tmdb.org/t/p/original/{{m.poster_path}}" alt="{{m.title}}" class="h-96 w-96">
+<h2>Choose Category</h2>
+<select (change)="Moviescategory($event)" name="" id="">
+    <option *ngFor="let g of genere" value="{{g.id}}">{{g.name}}</option>
+</select>
 
-        <h2 class="text-3xl text-orange-600">{{m.title}}</h2>
-        <p>{{m.overview}}</p>
-    </div>
+<div *ngIf="Moviedata.length > 0" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8 justify-items-center px-6">
+  <div *ngFor="let m of Moviedata" class="border-2 shadow-2xl shadow-green-700 border-b-blue-500 rounded-3xl flex flex-col items-center p-2 gap-3 bg-white hover:scale-105 transition-all ease-in duration-200">
+    <img src="https://image.tmdb.org/t/p/original/{{m.poster_path}}" alt="{{m.title}}" class="h-72 w-80">
+    <h2 class="text-3xl text-orange-600">{{m.title}}</h2>
+    <p>{{m.overview}}</p>
+  </div>
 </div>
+
