Movies data fixed with changedetectorref

--- a/src/app/Components/header/header.html
+++ b/src/app/Components/header/header.html
@@ -1,6 +1,9 @@
-<header class="flex flex-col lg:flex-row justify-between gap-4 
+<!-- <header class="flex flex-col lg:flex-row justify-between gap-4 
     bg-gradient-to-r from-blue-300 via-cyan-50 to-blue-100
-    px-4 py-2 items-center fixed w-full z-50">
+    px-4 py-2 items-center fixed w-full z-50"> -->
+    <header class="flex flex-col lg:flex-row justify-between gap-4 
+    bg-gradient-to-r from-blue-300 via-cyan-50 to-blue-100
+    px-4 py-2 items-center">
 <div class="flex flex-col lg:flex-row gap-2">
     <img src="{{Movielogo}}" alt="Movies" class="h-16">
 </div>
