--- a/src/app/movie/movie.html
+++ b/src/app/movie/movie.html
@@ -1,1 +1,4 @@
-<p>movie works!</p>
+<div class="h-2/3 flex flex-col md:flex-row gap-5 text-center items-center p-3 ">
+    <img src="https://image.tmdb.org/t/p/original/{{Moviedata.poster_path}}" alt="{{Moviedata.title}}" class="h-96">
+    <h2 class="text-4xl text-blue-500">{{Moviedata.title}}</h2>
+</div>
