--- a/src/app/Pages/home/home.html
+++ b/src/app/Pages/home/home.html
@@ -10,7 +10,8 @@
      <img src="https://image.tmdb.org/t/p/original/{{m.poster_path}}" alt="{{m.title}}" class="h-72 w-80">
     <h2 class="text-3xl text-orange-600">{{m.title}}</h2>
     <p>{{m.overview}}</p>
-    <p>Movie count: {{Moviedata.length}}</p>
+    <!-- <h2>Movie count: {{Moviedata.length}}</h2> -->
+    
 
    </a>
   </div>
