--- a/src/app/movie/movie.html
+++ b/src/app/movie/movie.html
@@ -1,4 +1,7 @@
 <div class="h-2/3 flex flex-col md:flex-row gap-5 text-center items-center p-3 ">
     <img src="https://image.tmdb.org/t/p/original/{{Moviedata.poster_path}}" alt="{{Moviedata.title}}" class="h-96">
-    <h2 class="text-4xl text-blue-500">{{Moviedata.title}}</h2>
+    <div class="flex flex-col gap-3">
+        <h2 class="text-4xl">Title:<span class=" text-blue-500">{{Moviedata.title}}</span></h2>
+    <p class="text-2xl">Overview:<span class="text-fuchsia-500">{{Moviedata.overview}}</span></p>
+    </div>
 </div>
