--- a/src/app/Pages/home/home.html
+++ b/src/app/Pages/home/home.html
@@ -1,11 +1,5 @@
 <div *ngIf="category_search" class="flex flex-col md:flex-row justify-between px-3">
- <div>
-   <h2>Choose Category</h2>
-<select (change)="Moviescategory($event)" name="" id="">
-    <option *ngFor="let g of genere" value="{{g.id}}">{{g.name}}</option>
-</select>
- </div>
-
+ 
 <div class="flex flex-col md:flex-row gap-0 md:gap-2 m-2">
   <input class="text-2xl border-2 border-red-600 rounded-3xl text-center" 
        placeholder="Search Movie"  
@@ -14,6 +8,14 @@
 <button class="border-2 border-blue-700 text-white rounded-2xl p-2" 
         (click)="SearchMovie()">Search</button>
 </div>
+
+<div class="mx-2">
+   <h2 class="text-2xl text-balck">Choose Category</h2>
+<select (change)="Moviescategory($event)" name="" id="" class="text-2xl text-rose-500">
+    <option *ngFor="let g of genere" value="{{g.id}}">{{g.name}}</option>
+</select>
+ </div>
+
 </div>
 
 
