--- a/src/app/movie/movie.html
+++ b/src/app/movie/movie.html
@@ -1,31 +1,51 @@
-<div class="h-3/4 flex flex-col md:flex-row gap-5  items-start p-2">
-    <img src="https://image.tmdb.org/t/p/original/{{Moviedata.poster_path}}" alt="{{Moviedata.title}}" class="h-3/4 w-96">
-    <div class="flex flex-col gap-8">
-        <h2 class="text-4xl">Title:<span class=" text-blue-500">{{Moviedata.title}}</span></h2>
-    <p class="text-2xl">Overview:<span class="text-fuchsia-500">{{Moviedata.overview}}</span></p>
-    <p class="text-2xl text-blue-400"><span class="text-black">Release Date:</span>{{Moviedata.release_date}}</p>
-    <p class="text-2xl text-blue-400"><span class="text-black">Runtime:</span>{{Moviedata.runtime}} minutes</p>
-    <p class="text-2xl text-blue-400"><span class="text-black">Budget:</span>{{Moviedata.budget}}</p>
-    <p class="text-2xl text-blue-400"><span class="text-black">Revenue:</span>{{Moviedata.revenue}}</p>
 
-    <table class="border-2 w-11/12">
-        <tr class="table">
-            <td class="table">
-                Title:
-            
-            </td>
-            <td>
-                {{Moviedata.title}}
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Overview:
-            </td>
-            <td>
-                {{Moviedata.overview}}
-            </td>
-        </tr>
-    </table>
-    </div>
+
+<div calss="flex flex-col">
+<div class="3/4 flex flex-col md:flex-row gap-5 items-start p-2">
+  <img
+    [src]="'https://image.tmdb.org/t/p/original/' + Moviedata.poster_path"
+    [alt]="Moviedata.title"
+    class="h-full w-96"
+  >
+
+  <div class="flex flex-col gap-8">
+    <h2 class="text-4xl">
+      Title: <span class="text-blue-500">{{ Moviedata.title }}</span>
+    </h2>
+
+    <p class="text-2xl">
+      Overview: <span class="text-fuchsia-500">{{ Moviedata.overview }}</span>
+    </p>
+
+    <p class="text-2xl text-blue-400">
+      <span class="text-black">Release Date:</span> {{ Moviedata.release_date }}
+    </p>
+
+    <p class="text-2xl text-blue-400">
+      <span class="text-black">Runtime:</span> {{ Moviedata.runtime }} minutes
+    </p>
+
+    <p class="text-2xl text-blue-400">
+      <span class="text-black">Budget:</span >{{Moviedata.budget>0 ? (Moviedata.budget | currency:'USD'):'Unknown'}}
+    </p>
+
+    <p class="text-2xl text-blue-400">
+      <span class="text-black">Revenue:</span> {{ Moviedata.revenue }}
+    </p>
+
+    <!-- FIXED IFRAME -->
+    
+
+  </div>
+  
+</div>
+<div class="flex m-3 justify-center">
+  <iframe
+      width="560"
+      height="315"
+      [src]="y"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen  class="m-3"> </iframe>
+</div>
 </div>
