--- a/src/app/Pages/home/home.html
+++ b/src/app/Pages/home/home.html
@@ -19,6 +19,8 @@
 </div>
 
 
+
+
 <!-- NORMAL MOVIES LIST -->
 <div *ngIf="searchedMovie.length === 0"
      class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8 justify-items-center px-6">
@@ -46,7 +48,7 @@
 
 <!-- SEARCH RESULT MOVIES LIST -->
 
-<div *ngIf="searchedMovie.length > 0"
+<!-- <div *ngIf="searchedMovie.length > 0"
      class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8 justify-items-center px-6 m-2">
 
   <div 
@@ -60,7 +62,24 @@
     </a>
 
   </div>
-</div>
+</div> -->
 
+
+<div *ngIf="searchedMovie.length > 0"
+     class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8 justify-items-center px-6 m-2">
+<div *ngFor="let m of SearchedMovieResults">
+  <div 
+       class="border-2 shadow-2xl shadow-green-700 border-b-blue-500 rounded-3xl flex flex-col items-center p-2 gap-3 bg-white">
+
+    <a [routerLink]="['/movie', m.id]">
+      <img [src]="'https://image.tmdb.org/t/p/original/' + m.poster_path"
+           [alt]="m.title"
+           class="h-72 w-80">
+      <h2 class="text-3xl text-orange-600">{{ m.title }}</h2>
+    </a>
+
+  </div>
+  </div>
+</div>
 
 
