--- a/src/app/Components/header/header.html
+++ b/src/app/Components/header/header.html
@@ -15,6 +15,7 @@
     <ul class="text-decoration-none flex flex-col lg:flex-row gap-4 justify-center items-center text-3xl ">
         <li><a routerLink="" class="hover:text-red-500">Home</a></li>
         <li><a routerLink="contact" class="hover:text-red-500">Contact</a></li>
+        <li><a routerLink="WatchList" class="hover:text-red-500">WatchList</a></li>
     </ul>
 </nav>
 
