--- a/src/app/Pages/home/home.html
+++ b/src/app/Pages/home/home.html
@@ -41,8 +41,12 @@
       </p>
 
     </a>
+ <div>
+           <button class="btn border-2 border-blue-500 p-2 rounded-3xl text-2xl text-white bg-blue-600" (click)="Watchlist(m)">{{MovieWatchList}}</button>
 
   </div>
+  </div>
+ 
 </div>
 
 
@@ -67,9 +71,9 @@
 
 <div *ngIf="searchedMovie.length > 0"
      class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8 justify-items-center px-6 m-2">
-<div *ngFor="let m of SearchedMovieResults">
+<div *ngFor="let m of SearchedMovieResults" class="flex flex-col gap-2 border-2 border-b-blue-300 rounded-3xl p-2 items-center">
   <div 
-       class="border-2 shadow-2xl shadow-green-700 border-b-blue-500 rounded-3xl flex flex-col items-center p-2 gap-3 bg-white">
+       class="border-2 shadow-2xl  flex flex-col items-center p-2 gap-3 bg-white">
 
     <a [routerLink]="['/movie', m.id]">
       <img [src]="'https://image.tmdb.org/t/p/original/' + m.poster_path"
@@ -78,8 +82,12 @@
       <h2 class="text-3xl text-orange-600">{{ m.title }}</h2>
     </a>
 
-  </div>
-  </div>
+</div> 
+<div>
+      <!-- <button class="btn border-2 border-blue-500 p-2 rounded-3xl text-2xl text-white bg-blue-600" (click)="Watchlist()">{{MovieWatchList}}</button> -->
+
 </div>
+ </div>
+  </div>
 
 
