--- a/src/app/Pages/home/home.html
+++ b/src/app/Pages/home/home.html
@@ -42,7 +42,7 @@
 
     </a>
  <div>
-           <button class="btn border-2 border-blue-500 p-2 rounded-3xl text-2xl text-white bg-blue-600" (click)="Watchlist(m)">{{MovieWatchList}}</button>
+           <button class="btn border-2 border-blue-500 p-2 rounded-3xl text-2xl text-white bg-blue-600" (click)="Watchlist(m)">{{m.buttontext}}</button>
 
   </div>
   </div>
