--- a/src/app/movie/movie.html
+++ b/src/app/movie/movie.html
@@ -30,7 +30,7 @@
     </p>
 
     <p class="text-2xl text-blue-400">
-      <span class="text-black">Revenue:</span> {{ Moviedata.revenue }}
+      <span class="text-black">Revenue:</span> {{ Moviedata.revenue>0? (Moviedata.revenue | currency:'USD'):'Unknown' }}
     </p>
 
     <!-- FIXED IFRAME -->
