--- a/src/app/Pages/home/home.html
+++ b/src/app/Pages/home/home.html
@@ -57,7 +57,7 @@
      class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8 justify-items-center px-6 m-2">
 <div *ngFor="let m of SearchedMovieResults" class="flex flex-col gap-2 border-2 border-b-blue-300 rounded-3xl p-2 items-center">
   <div 
-       class="border-2 shadow-2xl  flex flex-col items-center p-2 gap-3 bg-white">
+       class="flex flex-col items-center p-2 gap-3">
 
     <a [routerLink]="['/movie', m.id]">
       <img [src]="'https://image.tmdb.org/t/p/original/' + m.poster_path"
@@ -67,9 +67,7 @@
     </a>
 
 </div> 
-<div>
 
-</div>
  </div>
   </div>
 
