--- a/src/app/Pages/home/home.html
+++ b/src/app/Pages/home/home.html
@@ -1,15 +1,15 @@
 <div *ngIf="category_search" class="flex flex-col md:flex-row justify-between px-3">
  
-<div class="flex flex-col md:flex-row gap-0 md:gap-2 m-2">
-  <input class="text-2xl border-2 border-red-600 rounded-3xl text-center" 
+<div class="flex flex-col md:flex-row gap-0 md:gap-2 m-1">
+  <input class="text-3xl border-2 border-red-600 rounded-3xl text-center animate-pulse hover:animate-none hover:bg-blue-700 hover: text-white" 
        placeholder="Search Movie"  
        [(ngModel)]="searchedMovie">
 
-<button class="border-2 border-blue-700 text-white rounded-2xl p-2" 
+<button class="border-2 border-blue-700 text-white rounded-4xl p-1 w-25 text-3xl" 
         (click)="SearchMovie()">Search</button>
 </div>
 
-<div class="mx-2">
+<div class="mx-2 my-2 border-2 border-b-blue-300 rounded-3xl p-2">
    <h2 class="text-2xl text-balck">Choose Category</h2>
 <select (change)="Moviescategory($event)" name="" id="" class="text-2xl text-rose-500">
     <option *ngFor="let g of genere" value="{{g.id}}">{{g.name}}</option>
